refactor: change the repository structure
