# internal/handler/createResource.go
@@ -1,14 +1,13 @@
 package handler
 
 import (
+	"fmt"
 	"net/http"
 
-	"github.com/iagonc/jorge-cli/schemas"
+	"github.com/iagonc/jorge-cli/internal/schemas"
 
 	"github.com/gin-gonic/gin"
 )
-
-// @BasePath /api/v1
 
 // @Summary Create resource
 // @Description Create a new resource with DNS
@@ -16,12 +15,12 @@ import (
 // @Accept json
 // @Produce json
 // @Param request body schemas.Resource true "Request body"
-// @Success 200 {object} CreateResourceResponse
+// @Success 200 {object} SuccessResponse
 // @Failure 400 {object} ErrorResponse
 // @Failure 500 {object} ErrorResponse
 // @Router /resource [post]
-
 func CreateResourceHandler(ctx *gin.Context){
+	// TODO: modify this function to validate if already exist a resource with the same name
 	ValidateEmptyRequest(ctx)
 	if ctx.IsAborted() {
 		return
@@ -31,6 +30,17 @@ func CreateResourceHandler(ctx *gin.Context){
 
 	ValidateRequiredFields(ctx, &request)
 	if ctx.IsAborted() {
+		return
+	}
+
+	var existingResource schemas.Resource
+	if err := db.Where("name = ?", request.Name).First(&existingResource).Error; err == nil {
+		SendError(ctx, http.StatusConflict, fmt.Sprintf("Resource with name: %s already exists", request.Name))
+		return
+	}
+
+	if err := db.Where("dns = ?", request.Dns).First(&existingResource).Error; err == nil {
+		SendError(ctx, http.StatusConflict, fmt.Sprintf("Resource with DNS: %s already exists", request.Dns))
 		return
 	}
 
