# internal/handler/deleteResource.go
@@ -4,11 +4,23 @@ import (
 	"fmt"
 	"net/http"
 
-	"github.com/iagonc/jorge-cli/schemas"
+	"github.com/iagonc/jorge-cli/internal/schemas"
 
 	"github.com/gin-gonic/gin"
 )
 
+// @Summary Delete resource
+// @Description Delete a resource by its ID
+// @Tags resource
+// @Accept json
+// @Produce json
+// @Param id query string false "Resource ID"
+// @Param request body Resource false "Request body containing the resource details"
+// @Success 200 {object} SuccessResponse
+// @Failure 400 {object} ErrorResponse
+// @Failure 404 {object} ErrorResponse
+// @Failure 500 {object} ErrorResponse
+// @Router /resource [delete]
 func DeleteResourceHandler(ctx *gin.Context){
 	ValidateEmptyRequest(ctx)
 	if ctx.IsAborted() {
