# internal/handler/listResources.go
@@ -3,11 +3,20 @@ package handler
 import (
 	"net/http"
 
-	"github.com/iagonc/jorge-cli/schemas"
+	"github.com/iagonc/jorge-cli/internal/schemas"
 
 	"github.com/gin-gonic/gin"
 )
 
+// @Summary List resources
+// @Description Retrieve a list of resources
+// @Tags resource
+// @Accept json
+// @Produce json
+// @Success 200 {array} Resource
+// @Failure 404 {object} ErrorResponse
+// @Failure 500 {object} ErrorResponse
+// @Router /resources [get]
 func ListResourcesHandler(ctx *gin.Context){
 	var request []schemas.Resource
 
